data/derived/sp14/progs/unify/prog0399.ml.out
Characters 63-64:
  | [] -> x
          ^
Error: This expression has type 'a list -> 'b
       but an expression was expected of type 'b
       The type variable 'b occurs inside 'a list -> 'b
